# DeepBound

./: .gitmodules  DeepBound.sh  README  oneline_command.sh
example/: sample_test  sample_test2  test.ReadCount  test.bam  test.premature
parameters/: abu_model_MaxLik_15lab  abu_model_MaxLik_15lab.5000  abu_value_model_MSE_relval  bou_model_MaxAUC_3lab  bou_model_MaxAUC_3lab_iii.41  model_null_null_20_null_10000
parameters/old_models/: abu_model_MaxLik_13lab.1852  bou_model_MaxAUC_3lab.35  bou_model_MaxAUC_3lab_ii.38  bou_model_MaxAUC_3lab_iii.22  model_null_null_20_null_5000
source_code/: Abundance_Estimate.cpp  Abundance_Estimate_v1.02.cpp  Decompose_Commented_File.cpp  Fast_CAT.cpp  Fast_CAT_v2.cpp  Feature_Merge.cpp  Feature_Merge_wind.cpp  Feature_Merge_wind_v1.01.cpp  Generate_Feature.cpp  Generate_Feature_v4.cpp  Generate_Feature_v5.cpp  Makefile  distribute_ii_openmp.cpp  oneline_make.sh
source_code/backup_code/: Abundance_Estimate_v1.01.cpp  Mingfu_Feat_Merge_wind_v1.00.cpp  Mingfu_Feature_v3.cpp
source_code/gsamples_package/src/: .gitignore  Makefile.am  assembler.cc  assembler.h  binomial.cc  block.cc  block.h  bundle.cc  bundle.h  bundle_base.h  config.cc  config.h  fasta.cc  fasta.h  fscore.cc  fscore.h  gtf.cc  gtf.h  hit.cc  junction.cc  main.cc  region.cc  region.h
source_code/nnreg_src/: CNF.h  (+2 more)
source_code/pinpoint_package/: README  configure.ac  install_pinpoint.sh
source_code/pinpoint_package/src/: .gitignore  Makefile.am  block.cc  block.h  config.cc  config.h  main.cc  pinpoint.cc  pinpoint.h  position.cc  position.h  sample.cc  sample.h
(+3 files in other folders)
