#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(pinpoint, 1.0, mingfu.shao@cs.cmu.edu)
AM_INIT_AUTOMAKE(pinpoint, 1.0, mingfu.shao@cs.cmu.edu)
AC_CONFIG_SRCDIR([src/sample.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
